<resources>
    <string name="app_name">ChatingApp</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account_sign_in_here">Have an account? Sign in here</string>
    <string name="confirmpassword">ConfirmPassword</string>
    <string name="msg_token_fmt">hello</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>