<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="20dp"
    tools:context=".activities.SignInActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome"
            android:textColor="@color/primary_text"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="cursive"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_to_continue"
            android:textColor="@color/primary_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_input_text"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_input_text"
            android:layout_marginTop="40dp"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignIn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            app:cornerRadius="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/textviewCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:textStyle="bold"
            />

    </LinearLayout>
</ScrollView>