<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:clipToPadding="false"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/welcome"
            android:textColor="@color/primary_text"
            android:textSize="40sp"
            android:textStyle="bold"
            android:fontFamily="cursive"
            />
        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <ImageView
                android:id="@+id/imageSignUp"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/background_image"
                android:layout_gravity="center_horizontal"
                android:scaleType="centerCrop"
                />
            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/secondary_text"
                android:textSize="10sp"/>



        </FrameLayout>
        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_input_text"
            android:layout_marginTop="40dp"
            android:hint="@string/name"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_input_text"
            android:layout_marginTop="40dp"
            android:hint="@string/email"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_input_text"
            android:layout_marginTop="40dp"
            android:hint="@string/password"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/background_input_text"
            android:layout_marginTop="40dp"
            android:hint="@string/confirmpassword"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:animateLayoutChanges="true">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cornerRadius="20dp"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/white"/>
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:visibility="invisible"
                />
        </FrameLayout>


        <TextView
            android:id="@+id/textviewSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/have_an_account_sign_in_here"
            android:textColor="@color/primary_text"
            android:textSize="15sp"
            android:textStyle="bold"
            />
    </LinearLayout>

</ScrollView>